# BMS

./: README.md  new_token.txt  test.txt  token.txt
.metadata/: .log4j2.xml  version.ini
GETjag_bms/: .cproject  .mxproject  .project  GETjag_bms (1).launch  GETjag_bms.ioc  GETjag_bms.launch
GETjag_bms/Debug/: GETjag_bms.elf  GETjag_bms.hex  GETjag_bms.list  GETjag_bms.map  makefile  objects.list  sources.mk  st-link_gdbserver_log.txt
GETjag_bms_backup/: .cproject  .mxproject  .project  GETjag_bms_backup.ioc  GETjag_bms_backup.launch
GETjag_bms_backup/Debug/: GETjag_bms_backup.elf  GETjag_bms_backup.hex  GETjag_bms_backup.list  GETjag_bms_backup.map  makefile  objects.list  sources.mk
KiCAD/: AFE_and_Balance_Charging.kicad_pcb  AFE_and_Balance_Charging.kicad_sch  AFE_and_Balance_Charging.xml  Double_Pack_BMS_BQ76952_[1].kicad_pcb  Double_Pack_BMS_BQ76952_[1].kicad_sch  Double_Pack_BMS_BQ76952_[1].xml
Records/: 001.SVdat  003.SVdat  004.SVdat  005.SVdat
bms_gui/install/: local_setup.sh  setup.sh
bms_gui/log/: latest_build
bms_gui/src/: CMakeLists.txt  package.xml
bms_gui/src/bms_gui/include/bms_gui/: mainwindow.h  ros2comm.h
bms_gui/src/bms_gui/install/: local_setup.sh  setup.sh
bms_gui/src/bms_gui/install/bms_gui/lib/bms_gui/: bms_gui
bms_gui/src/bms_gui/install/bms_gui/share/bms_gui/: package.bash  package.ps1  package.sh  package.zsh
bms_gui/src/bms_gui/log/: latest_build
bms_gui/src/bms_gui/src/: mainwindow.cpp  ros2comm.cpp
bms_gui/src/bms_gui/ui/: mainwindow.ui
bms_gui/src/include/bms_gui/: mainwindow.h  ros2comm.h
bms_gui/src/install/: local_setup.sh  setup.sh
bms_gui/src/install/bms_gui/lib/bms_gui/: bms_gui
bms_gui/src/install/bms_gui/share/ament_index/resource_index/package_run_dependencies/: bms_gui
bms_gui/src/install/bms_gui/share/bms_gui/: local_setup.sh  package.dsv  package.sh
bms_gui/src/log/: latest_build
bms_gui/src/src/: main.cpp  mainwindow.cpp  ros2comm.cpp
bms_gui/src/ui/: mainwindow.ui
build-qt_gui-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qt_gui  qtcsettings.cmake
build-qt_gui-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-qt_gui-Desktop-Debug/qt_gui_autogen/: deps
qt_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: .cproject  .mxproject  .project  test.ioc  test.launch
test/Debug/: makefile  objects.list  test.elf  test.hex  test.list  test.map
try/: .cproject  .mxproject  .project  try.ioc  try.launch
try/Debug/: makefile  try.elf  (+2 more)
usb_test/: .cproject  .mxproject  usb_test.ioc  usb_test.launch
(+383 files in other folders)
